PLD-COMP-RENDU/pld-comp/tests/ifcc-test-output/testfiles-test-erreurs-Test-4_5-119_division_invalide3/gcc-compile.txt
input.c: In function ‘main’:
input.c:3:12: error: expected expression before ‘/’ token
    3 |     return /;
      |            ^

return code: 1
